--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -423,6 +423,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_search_result_on_cancel">Show result on cancel</string>
     <string name="show_search_result_on_cancel_summary">When you press a cancel button, and search has matches then if the option is enabled will show you these matches.</string>
     <string name="max_search_depth">Search depth</string>
+    <string name="show_history">Show history</string>
     <string name="ignored_search_dir_names">Ignored directory names</string>
     <string name="ignored_search_dir_names_dialog">Ignore folder names for search.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*</string>
     <string name="ignored_search_file_names">Ignored file names</string>
