--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -418,21 +418,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Import settings from backup json file. On success, the app is restarted.</string>
     <string name="failed_to_restore_settings_from_backup">Failed to restore settings from backup</string>
     <string name="newline_is_new_paragraph">Newline = new paragraph</string>
-    <string name="searchCategory">Search</string>
     <string name="search_in_content">Search in content</string>
     <string name="max_search_depth">Search depth</string>
     <string name="show_history">Show history</string>
-    <string name="ignored_search_dir_names">Ignored directory names</string>
-    <string name="ignored_search_dir_names_dialog">Ignore folder names for search.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*</string>
+    <string name="ignored_directories">Ignored directories</string>
+    <string name="specify_directories_that_should_not_be_searched">Specify directories that should not be searched.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*</string>
     <string name="ignored_search_file_names">Ignored file names</string>
     <string name="ignored_search_file_names_dialog">Ignore file names for search.\nUse new line as separator.\nUse quotes for exact file names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^[.].*\n\"Test\"\n.*[.][mM][pP][34]$\n.*secret.*</string>
     <string name="search_by_context_have_to_include">Filenames in search by context have to include</string>
-    <string name="search_by_context_have_to_include_dialog">Search by context only for filenames that contain Extension. Use new line as separator.\nExamples: .md\n.txt.</string>
     <string name="regex_search">Regex search</string>
     <string name="case_sensitive">Case sensitive</string>
     <string name="only_first_content_match">Get first content match</string>
     <string name="regex_can_not_compile">Regex: can not compile \'%s\'</string>
-    <string name="show_match_preview">Show match preview</string>
     <string name="show_match_preview_summary">Show match preview when using content search.</string>
     <string name="keep_both">Keep both</string>
     <string name="skip">Skip</string>
@@ -443,4 +440,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' already exists in %s</string>
     <string name="additional_contexts_and_projects">Additional contexts and projects</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Enter space-separated @contexts and +projects. These will always be visible at todo.txt insert dialogs.</string>
+    <string name="infinite">Infinite</string>
 </resources>
