--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -34,7 +34,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">اضافه کردن %s</string>
     <string name="select_folder">انتخاب پوشه</string>
     <string name="edit">ویرایش</string>
-    <string name="search_documents">جستجو پرونده‌ها</string>
+    <string name="search_in_document">جستجو پرونده‌ها</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">به اشتراک‌گذاری با...</string>
     <string name="share">به اشتراک‌گذاری</string>
     <string name="search">جستجو</string>
