--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -34,7 +34,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Tambahkan ke %s</string>
     <string name="select_folder">Pilih folder</string>
     <string name="edit">Ubah</string>
-    <string name="search_documents">Cari dokumen</string>
+    <string name="search_in_document">Cari dokumen</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Bagikan ke&#8230;</string>
     <string name="share">Bagikan</string>
     <string name="search">Cari</string>
