--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -34,7 +34,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">%s இதனுடன் சேர்க்கவும்</string>
     <string name="select_folder">கோப்புறையைத் தேர்வு செய்</string>
     <string name="edit">திருத்து</string>
-    <string name="search_documents">கோப்புகளை தேடு</string>
+    <string name="search_in_document">கோப்புகளை தேடு</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">&#8230; ல் பகிரவும்</string>
     <string name="share">பகிர்</string>
     <string name="search">தேடு</string>
