--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -34,7 +34,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">להוסיף ל- %s</string>
     <string name="select_folder">בחר תיקיה</string>
     <string name="edit">ערוך</string>
-    <string name="search_documents">חפש במסמכים</string>
+    <string name="search_in_document">חפש במסמכים</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">שתף ל&#8230;</string>
     <string name="share">שתף</string>
     <string name="search">חפש</string>
