--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -35,7 +35,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Juntar a %s</string>
     <string name="select_folder">Selecionar pasta</string>
     <string name="edit">Editar</string>
-    <string name="search_documents">Pesquisar documentos</string>
+    <string name="search_in_document">Pesquisar documentos</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Partilhar com&#8230;</string>
     <string name="share">Partilhar</string>
     <string name="search">Pesquisar</string>
