--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -33,7 +33,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Gắn tiếp vào %s</string>
     <string name="select_folder">Chọn thư mục</string>
     <string name="edit">Chỉnh sửa</string>
-    <string name="search_documents">Tìm kiếm tài liệu</string>
+    <string name="search_in_document">Tìm kiếm tài liệu</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Chia sẻ về&#8230;</string>
     <string name="share">Chia sẻ</string>
     <string name="search">Tìm kiếm</string>
