--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -35,7 +35,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">附加至 %s</string>
     <string name="select_folder">选择目录</string>
     <string name="edit">编辑</string>
-    <string name="search_documents">搜索文档</string>
+    <string name="search_in_document">搜索文档</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">分享至…</string>
     <string name="share">分享</string>
     <string name="search">搜索</string>
