--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,7 +35,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Agregar a %s</string>
     <string name="select_folder">Seleccionar carpeta</string>
     <string name="edit">Editar</string>
-    <string name="search_in_document">Buscar documentos</string>
+    <string name="search_documents">Buscar documentos</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Compartir con...</string>
     <string name="share">Compartir</string>
     <string name="search">Búsqueda</string>
