--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -32,7 +32,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Rnu ar %s</string>
     <string name="select_folder">Fren akaram</string>
     <string name="edit">Ẓreg</string>
-    <string name="search_in_document">Nadi di tizmilin</string>
+    <string name="search_documents">Nadi di tizmilin</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Bḍu s…</string>
     <string name="share">Bḍu</string>
     <string name="search">Nadi</string>
