--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -35,7 +35,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">Ajouter à %s</string>
     <string name="select_folder">Sélectionnez le dossier</string>
     <string name="edit">Éditer</string>
-    <string name="search_in_document">Rechercher des documents</string>
+    <string name="search_documents">Rechercher des documents</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Partager avec…</string>
     <string name="share">Partager</string>
     <string name="search">Recherche</string>
