--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -31,7 +31,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">%s में सम्मिलित करें</string>
     <string name="select_folder">फोल्डर का चयन करें</string>
     <string name="edit">संपादित करें</string>
-    <string name="search_in_document">नोट खोजें</string>
+    <string name="search_documents">नोट खोजें</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">साझा करें &#8230;</string>
     <string name="share">बांटे</string>
     <string name="search">खोजें</string>
