--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -34,7 +34,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_to_witharg">%s-ഓട് കൂട്ടിച്ചേർക്കുക</string>
     <string name="select_folder">ഫോൾഡർ തിരഞ്ഞെടുക്കുക</string>
     <string name="edit">എഡിറ്റ്‌</string>
-    <string name="search_in_document">ഡോക്യൂമെന്റസ് പരതുക</string>
+    <string name="search_documents">ഡോക്യൂമെന്റസ് പരതുക</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">&#8230; ലേക്ക് പങ്കുവെക്കുക</string>
     <string name="share">പങ്കുവയ്ക്കുക</string>
     <string name="search">തിരയുക</string>
