--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,7 +330,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Reload</string>
     <string name="wrap_words">Wrap words</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Soft break if text doesn\'t fit to screen width. Else enable horizontal scrolling.</string>
-    <string name="recursive_search_in_current_directory">Recursive search in current directory. When query contains a asterisk (*) regex search is used, otherwise check if the query is contained.</string>
+    <string name="recursive_search_in_current_directory">Recursive search in current directory.</string>
     <string name="always_open_with_this_app">Always open with this app</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Always open files with this app when the list contains the file extension. Use \'None, .html, .css , .js\' for example if you want to edit web files and those without file extension.</string>
     <string name="template">Template</string>
@@ -418,6 +418,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Import settings from backup json file. On success, the app is restarted.</string>
     <string name="failed_to_restore_settings_from_backup">Failed to restore settings from backup</string>
     <string name="newline_is_new_paragraph">Newline = new paragraph</string>
+    <string name="search_in_content">Search in content</string>
+    <string name="max_search_depth">Search depth</string>
+    <string name="ignore_list">Ignore list</string>
+    <string name="do_not_search_specified_files_and_folders">Do not search specified files and folders.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Regex search</string>
+    <string name="case_sensitive">Case sensitive</string>
+    <string name="only_first_content_match">Get first content match</string>
+    <string name="regex_can_not_be_compiled">Regex can not be compiled</string>
     <string name="keep_both">Keep both</string>
     <string name="skip">Skip</string>
     <string name="overwrite">Overwrite</string>
@@ -427,4 +435,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' already exists in %s</string>
     <string name="additional_contexts_and_projects">Additional contexts and projects</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Enter space-separated @contexts and +projects. These will always be visible at todo.txt insert dialogs.</string>
+    <string name="infinite">Infinite</string>
 </resources>
