--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -424,7 +424,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="do_not_search_specified_files_and_folders">Do not search specified files and folders.\nUse new line as separator.\nUse quotes for exact dir names: \"Test\".\nOr use Regex \'^[.].*\'\nExamples: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Regex search</string>
     <string name="case_sensitive">Case sensitive</string>
-    <string name="only_first_content_match">Get first content match</string>
+    <string name="stop_search_after_first_match">Stop search after first match</string>
     <string name="regex_can_not_be_compiled">Regex can not be compiled</string>
     <string name="keep_both">Keep both</string>
     <string name="skip">Skip</string>
