--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">刷新</string>
     <string name="wrap_words">折行</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">如果文字不适合屏幕宽度则软打断。否则启用横向滚动。</string>
-    <string name="recursive_search_in_current_directory">在当前目录中递归搜索。当查询包含星号 (*) 时使用正则表达式搜索，否则检查是否包含查询。</string>
+    <string name="recursive_search_in_current_directory">在当前目录中进行递归搜索。</string>
     <string name="always_open_with_this_app">总是使用此应用打开</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">当列表包含文件扩展名时总是使用此应用打开文件。例如如果您想编辑网页文件和无扩展名文件，请使用 \'None, .html, .css , .js\' 。</string>
     <string name="template">模板</string>
@@ -402,6 +402,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">从备份json文件导入设置。成功后，应用程序将重启。</string>
     <string name="failed_to_restore_settings_from_backup">从备份恢复设置失败</string>
     <string name="newline_is_new_paragraph">新行 = 新段</string>
+    <string name="search_in_content">搜索内容</string>
+    <string name="max_search_depth">搜索深度</string>
+    <string name="ignore_list">忽略列表</string>
+    <string name="do_not_search_specified_files_and_folders">不要搜索指定的文件和文件夹。\n使用新行作为分隔符。\n使用报价确切的目录名：“测试”。\n或使用Regex \'^[.].*\'\n示例：^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">正则表达式搜索</string>
+    <string name="case_sensitive">区分大小写</string>
+    <string name="regex_can_not_be_compiled">无法编译正则表达式</string>
     <string name="keep_both">两者都保留</string>
     <string name="skip">跳过</string>
     <string name="overwrite">覆盖</string>
@@ -411,4 +418,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s已存在于 %s</string>
     <string name="additional_contexts_and_projects">其他背景和项目</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">输入space-separated @context和 +project。这些都将在 todo.txt 插入对话框时显示。</string>
+    <string name="infinite">无限的</string>
 </resources>
