--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -315,7 +315,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Obnovit</string>
     <string name="wrap_words">Zalamování slov</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Měkké zalomení, pokud text neodpovídá šířce obrazovky. Jinak je třeba povolit horizontální posuv.</string>
-    <string name="recursive_search_in_current_directory">V aktuální složce se používá rekursivní vyhledávání. Pokud dotaz obsahuje hvězdičku (*), použije se regex. Jinak se kontroluje výskyt hledaného výrazu.</string>
+    <string name="recursive_search_in_current_directory">Rekurentní vyhledávání v aktuální složce.</string>
     <string name="always_open_with_this_app">Vždy otvírat pomocí této aplikace</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Vždy otvírat soubory touto aplikací, pokud mají příponu souboru z následujícího seznamu. Použijte \'None, .html, .css , .js\' pokud například chcete upravovat webové soubory a soubory bez přípony souboru.</string>
     <string name="template">Šablona</string>
@@ -402,6 +402,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importovat nastavení ze záložního souboru json. Po úspěšnosti je aplikace restartována.</string>
     <string name="failed_to_restore_settings_from_backup">Nepodařilo se obnovit nastavení ze zálohy</string>
     <string name="newline_is_new_paragraph">Nový řádek = nový odstavec</string>
+    <string name="search_in_content">Hledat v obsahu</string>
+    <string name="max_search_depth">Hloubka hledání</string>
+    <string name="ignore_list">Ignorovat seznam</string>
+    <string name="do_not_search_specified_files_and_folders">Nevyhledávat zadané soubory a složky.\nPoužijte nový řádek jako oddělovač.\nPoužijte uvozovky pro přesné názvy adresáře: \"Test\".\nNebo použijte Regex \'^[.].*\'\nPříklady: ^\\..*\n\"test\"\n\"Test\"\n.*secret.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Regex vyhledávání</string>
+    <string name="case_sensitive">Rozlišovat velikost písmen</string>
+    <string name="stop_search_after_first_match">Zastavit hledání po první hodině</string>
+    <string name="regex_can_not_be_compiled">Regex nelze kompilovat</string>
     <string name="keep_both">Zachovat obojí</string>
     <string name="skip">Přeskočit</string>
     <string name="overwrite">Přepsat</string>
@@ -411,4 +419,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' již existuje v %s</string>
     <string name="additional_contexts_and_projects">Dodatečné kontexty a projekty</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Zadejte @contexty oddělené mezerou a +projects. Ty budou vždy viditelné při vkládání dialogových oken.</string>
+    <string name="infinite">Nekonečný</string>
 </resources>
