[ci skip] Crowdin translation bot: New translations for Greek

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -316,7 +316,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="reload">Επαναφόρτωση</string>
     <string name="wrap_words">Αναδίπλωση λέξεων</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Soft break if text doesn\'t fit to screen width. Else enable horizontal scrolling.</string>
-    <string name="recursive_search_in_current_directory">Αναδρομική αναζήτηση στον τρέχοντα κατάλογο. Όταν το ερώτημα περιέχει έναν αστερίσκο (*) χρησιμοποιείται η αναζήτηση regex, αλλιώς ελέγξτε αν το ερώτημα περιέχεται.</string>
+    <string name="recursive_search_in_current_directory">Αναδρομική αναζήτηση στον τρέχοντα κατάλογο.</string>
     <string name="always_open_with_this_app">Πάντα άνοιγμα με αυτήν την εφαρμογή</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Πάντα να ανοίγετε αρχεία με αυτήν την εφαρμογή, όταν η λίστα περιέχει την επέκταση αρχείου. Χρησιμοποιήστε \'Κανένα, .html, . ss , .js\' για παράδειγμα, αν θέλετε να επεξεργαστείτε τα αρχεία web και αυτά χωρίς επέκταση αρχείου.</string>
     <string name="template">Πρότυπο</string>
@@ -403,6 +403,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Εισαγωγή ρυθμίσεων από αντίγραφο ασφαλείας του αρχείου json. Με επιτυχία, η εφαρμογή επανεκκινείται.</string>
     <string name="failed_to_restore_settings_from_backup">Αποτυχία επαναφοράς ρυθμίσεων από αντίγραφο ασφαλείας</string>
     <string name="newline_is_new_paragraph">Newline = νέα παράγραφος</string>
+    <string name="search_in_content">Αναζήτηση στο περιεχόμενο</string>
+    <string name="max_search_depth">Βάθος αναζήτησης</string>
+    <string name="ignore_list">Αγνόηση λίστας</string>
+    <string name="do_not_search_specified_files_and_folders">Να μην γίνεται αναζήτηση σε συγκεκριμένα αρχεία και φακέλους.\nΧρησιμοποιήστε τη νέα γραμμή ως διαχωριστικό.\nΧρησιμοποιήστε εισαγωγικά για ακριβή ονόματα dir: \"Test\".\nΉ χρησιμοποιήστε Regex \'↑[.].*\'\nΠαραδείγματα: ^\\..*\n\"δοκιμή\"\n\"Δοκιμή\"\n.*μυστικό.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="regex_search">Αναζήτηση Regex</string>
+    <string name="case_sensitive">Διάκριση πεζών/ κεφαλαίων</string>
+    <string name="stop_search_after_first_match">Διακοπή αναζήτησης μετά την πρώτη αντιστοίχιση</string>
+    <string name="regex_can_not_be_compiled">Regex δεν μπορεί να μεταγλωττιστεί</string>
     <string name="keep_both">Κρατήστε και τα δύο</string>
     <string name="skip">Παράλειψη</string>
     <string name="overwrite">Αντικατάσταση</string>
@@ -412,4 +420,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_move_conflict_message">\'%s\' υπάρχει ήδη στο %s</string>
     <string name="additional_contexts_and_projects">Πρόσθετα πλαίσια και έργα</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Εισάγετε διαχωρισμένα με κενά διαστήματα @contexts και +projects. Αυτά θα είναι πάντα ορατά στους διαλόγους εισαγωγής todo.txt.</string>
+    <string name="infinite">Απεριόριστο</string>
 </resources>
